src/mesa/drivers/dri/i965/brw_program.h
@@ -34,7 +34,7 @@ struct brw_context;
 
 struct nir_shader *brw_create_nir(struct brw_context *brw,
                                   const struct gl_shader_program *shader_prog,
-                                  const struct gl_program *prog,
+                                  struct gl_program *prog,
                                   gl_shader_stage stage,
                                   bool is_scalar);
 
